# RAG_chatbot

./: .env.example  .gitignore  RAG_bot.py  README.md  backend.Dockerfile  docker-compose.yml  pyproject.toml  send_to_storage.py
evaluation/: evaluation.py  evaluation_LangSmith.py  passage_map.json
evaluation/evaluators/: LLMJudge.py  generation_eval.py  retrieval_eval.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInput.jsx  ChatMessages.jsx  Chatbot.jsx
scripts/: send_to_storage.py
src/backend/mcp/servers/clients/: MCPClient.py
src/backend/rag/: RAG_bot.py  build_passage_map.py  embed_chunks.py  embedding_utils.py  env.py  index_utils.py  retrieval_utils.py
src/rag_chatbot/: backend_api.py
src/rag_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rag_chatbot/mcp/servers/: jira_server.py
src/rag_chatbot/mcp/servers/clients/: MCPClient.py
src/rag_chatbot/rag/: LLMChunker.py  RAG_bot.py  blob_utils.py  embed_chunks.py  embedding_utils.py  env.py  index_utils.py  main.py  retrieval_utils.py
src/rag_chatbot/redis/: redis_client.py
src/rag_chatbot/ui/: app_utils.py  gradio_app.py  requirements.txt  theme.py
src/rag_chatbot/ui/res/: content.txt
tests/: test_map.py  test_mrr.py
tests/chat/: test_decide_route.py  test_general_llm.py  test_handle_chat.py  test_rag_llm.py
tests/embeddings/: test_embedding_utils.py
tests/mcp/: test_jira_server.py
tests/search_indexes/: test_index_schmas.py
