[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-search-documents>=11.6.0",
    "azure-storage-blob>=12.28.0",
    "fastapi>=0.135.1",
    "gradio>=6.9.0",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.1.1",
    "langextract>=1.1.1",
    "mcp[cli]>=1.26.0",
    "openai>=2.26.0",
    "pytest>=9.0.2",
    "redis>=7.3.0",
    "sentence-transformers>=5.2.3",
    "uvicorn>=0.41.0",
]
